Added resource to get person info by his id
