# server/internal/personal/delivery/http/data_in.go
@@ -1,0 +1,9 @@
+package http
+
+// data for getting person info
+//
+//easyjson:json
+type getPersonInfoIn struct {
+	// ID личности
+	PersonID int `params:"personID" validate:"required"`
+}
